--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
    <meta charset="utf-8">
-   <title>Coding Challenge 3-2</title>
+   <title>Grid Layout Sample</title>
    <link href="grid.css" rel="stylesheet" />
    <link href="layout.css" rel="stylesheet" />
    
